2004-04-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* buildscripts/mf-to-table.py (parse_logfile): don't append
	encoding to fontname.

2004-04-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-ps.scm (define-fonts): Load .enc only once.

	* mf/GNUmakefile (INSTALLATION_OUT_SUFFIXES): Install .enc files
	too.

2004-04-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* buildscripts/mf-to-table.py (parse_logfile): remove spaces from
	encoding field.

	* lily/stencil-scheme.cc: remove ly:fontify-atom 

	* ly/portuges.ly (pitchnames): new file.

	* lily/include/lily-guile.hh: many new ly_ functions.  Thanks to
	Michael Welsh Duggan

	* lily/*.cc: deprecate gh_ interface. Thanks to Michael Welsh Duggan

	* ly/nederlands.ly: add comment about digits.

	* lily/scaled-font-metric.cc (derived_mark): idem.

	* scm/encoding.scm (make-encoding-mapping): change permutation to
	mapping.

	* lily/scaled-font-metric.cc (derived_mark): is a const method.
	(Modified_font_metric): make alist for coding_description_
	(LY_DEFINE): remove coding-name.

	* scm/output-tex.scm (text): remove debugging code.

	* lily/scaled-font-metric.cc (ly_font_encoding): return vector

	* buildscripts/mf-to-table.py (parse_logfile): read EncodingScheme
	from infile.

	* mf/feta-generic.mf: move fet_beginfont into generic code.
	use fetaMusic (without space) as encoding

	* mf/feta-autometric.mf: take encoding argument

	* lily/afm.cc (read_afm_file): bugfix, read global info too. 

	* lily/my-lily-lexer.cc (set_identifier): remove gh_scm2newstr
	use.

	* scm/encoding.scm (read-encoding-file): use symbol for glyph
	name.

2004-04-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/title-markup.ly: Set inputencoding.

	* scm/output-ps.scm (define-fonts): Handle font re-encoding.

	* lily/scaled-font-metric.cc (ly:font-coding-name): New function.

	* scm/encoding.scm (get-coding-filename, get-coding-command): New
	function.
	(coding-alist): Also hold filename, command.